# hget

./: Cargo.toml  Makefile  README.md
crates/cli/: Cargo.toml
crates/cli/src/: editor.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: env.rs  executor.rs  helpers.rs  http_request.rs  lib.rs  parser.rs  repository.rs
crates/gui/: Cargo.toml  package.json
crates/gui/src/: app.tsx  index.css  main.tsx  theme.css  types.ts
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/src/: lib.rs
crates/gui/src-tauri/src/commands/: create.rs  get_tree.rs  load_file.rs  mod.rs
crates/gui/src/components/: dialog.tsx  icon-button.module.css  icon-button.tsx  modal.tsx  open-collection-button.tsx  popper.tsx  split-pane.module.css  split-pane.tsx  tab.module.css  tab.tsx  tabs.tsx
crates/gui/src/components/button/: index.tsx
crates/gui/src/components/create-request/: create-request.module.css  create-request.tsx
crates/gui/src/components/file-tree/: dir-settings-button.tsx  file-tree.module.css  file-tree.tsx  item.tsx
crates/gui/src/components/menu/: index.module.css  menu-item.tsx  (+1 more)
crates/gui/src/hooks/: use-click-outside.tsx  use-file-tree.ts  use-file.ts  use-tree-store.ts
crates/gui/src/icons/: arrow.tsx  close.tsx  save-icon.tsx  send-icon.tsx  three-dots.tsx  types.ts
crates/gui/src/layout/: side-menu.tsx
crates/gui/src/modules/: container.tsx
crates/gui/src/store/: app-store.tsx  types.ts  use-tabs.ts
crates/gui/src/utils/: request.ts  safe.ts
sample/: simple.http  single-with-name.http  single.http  text.http
(+25 files in other folders)
