[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui/src-tauri",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# http
reqwest = { version = "0.12", features = ["json", "stream"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"
anyhow = "1"
