[package]
name = "hget-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.27.0"
slug = "0.1.6"
